RESOLVED FIXED22351
WebKit nightly crashes on launch on 10.4.11
https://bugs.webkit.org/show_bug.cgi?id=22351
Summary WebKit nightly crashes on launch on 10.4.11
Jurek Raben
Reported 2008-11-18 21:43:57 PST
Since I downloaded build 38568 and afterwarts 38586, Safari does not start anymore. The following message appears: WebKit failed to open correctly on your previous attempt. Please disable any Safari extensions that you may have installed. If the problem continues to occur, please file a bug report at http://webkit.org/quality/reporting.html Safari 3.12 does start normal. I did not install the recent Apple security package (maybe important info?). Thanks for fixing this. WebKit is the best!
Attachments
Mark Rowe (bdash)
Comment 1 2008-11-18 22:14:18 PST
Please attach a crash log. See <http://webkit.org/quality/crashlogs.html> for info.
Mark Rowe (bdash)
Comment 2 2008-11-19 01:06:12 PST
Fixed with r38592.
Note You need to log in before you can comment on or make changes to this bug.