Expand the workaround for Apple GCC compiler bug <rdar://problem/6354696> to all versions of GCC 4.0.1. It has been observed with builds 5465 (Xcode 3.0) and 5484 (Xcode 3.1), and there is no evidence that it has been fixed in newer builds of GCC 4.0.1.

This addresses <https://bugs.webkit.org/show_bug.cgi?id=22351> (WebKit nightly crashes on launch on 10.4.11).

Reviewed by Alexey Proskuryakov.

* wtf/StdLibExtras.h:

Canonical link: https://commits.webkit.org/30801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38592 268f45cc-cd09-0410-ab3c-d52691b4dbfc